# study-db

./: .gitignore  books.yaml  genres.yaml  pyproject.toml  to_do.md
ADR/: adr-001-db_choice.md
alembic/: env.py
alembic/versions/: 15e386ab1823_deleted_book_author_name_column.py  4350b8f49338_added_price_column.py  75232a2bc3c5_renamed_books_author_column.py  8a98e5a11d0b_added_author_table_and_relation.py  a7a355b92ac2_added_author_table_and_relation.py  c7a6b43bf028_added_table_genres.py
study_db/: cli.py  config.py  crud.py  database.py  models.py
